--- a/public/default.html
+++ b/public/default.html
@@ -3,7 +3,7 @@
     <head>
     <meta charset="utf-8" />
     <title>Cards Against Humanity</title>
-    <script type="text/javascript" src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-1.7.1.min.js"></script>
     <link rel="stylesheet" href="style/Cards.css"/>
     <script src="/socket.io/socket.io.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
