--- a/public/default.html
+++ b/public/default.html
@@ -7,6 +7,7 @@
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.7.1.min.js"></script>
     <link rel="stylesheet" href="style/Cards.css"/>
     <script src="/socket.io/socket.io.js"></script>
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.12/jquery-ui.min.js"></script>   
     <script type="text/javascript" src="js/main.js"></script>
     </head>
     <body>
