Include JQuery animate box shadow script

--- a/public/default.html
+++ b/public/default.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style/Cards.css"/>
     <script src="/socket.io/socket.io.js"></script>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.12/jquery-ui.min.js"></script>   
+    <script type="text/javascript" src="https://bitstorm.org/jquery/shadow-animation/jquery.animate-shadow-min.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
     </head>
     <body>
